# t_banking

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
data/: my_operations.xls
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html
json/: main_page.json
src/: external_api.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  empty_operations.xlsx  reduced_operations.xlsx  test_external_api.py  test_reports.py  test_services.py  test_utils.py
